【新版本】M.3.1 发布

--- a/calculator-ui/src/main/resources/org/wangpai/calculator/view/mainface/CalculatorMainFace.fxml
+++ b/calculator-ui/src/main/resources/org/wangpai/calculator/view/mainface/CalculatorMainFace.fxml
@@ -7,7 +7,7 @@
 <GridPane alignment="CENTER" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity"
           prefHeight="781.0" prefWidth="1274.0"
           xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1"
-          fx:controller="org.wangpai.calculator.view.CalculatorMainFace">
+          fx:controller="org.wangpai.calculator.view.mainface.CalculatorMainFace">
     <columnConstraints>
         <ColumnConstraints halignment="CENTER" hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
         <ColumnConstraints halignment="CENTER" hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
@@ -19,9 +19,9 @@
         <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
     </rowConstraints>
     <children>
-        <fx:include source="input/InputBox.fxml" fx:id="inputVbox"/>
-        <fx:include source="control/ButtonGroup.fxml"  GridPane.rowIndex="1" GridPane.rowSpan="2" fx:id="buttongroupVbox"/>
-        <fx:include source="output/ResultBox.fxml"  GridPane.columnIndex="1" GridPane.rowSpan="3" fx:id="promptmsgboxVbox"/>
-        <fx:include source="output/PromptMsgBox.fxml"  GridPane.columnIndex="2" GridPane.rowSpan="3" fx:id="resultboxVbox"/>
+        <fx:include source="../input/InputBox.fxml" fx:id="inputVbox"/>
+        <fx:include source="../control/ButtonGroup.fxml" GridPane.rowIndex="1" GridPane.rowSpan="2" fx:id="buttongroupVbox"/>
+        <fx:include source="../output/ResultBox.fxml" GridPane.columnIndex="1" GridPane.rowSpan="3" fx:id="promptmsgboxVbox"/>
+        <fx:include source="../output/PromptMsgBox.fxml" GridPane.columnIndex="2" GridPane.rowSpan="3" fx:id="resultboxVbox"/>
     </children>
 </GridPane>
