--- a/calculator-ui/src/main/resources/org/wangpai/calculator/view/base/OutputTextBox.fxml
+++ b/calculator-ui/src/main/resources/org/wangpai/calculator/view/base/OutputTextBox.fxml
@@ -1,9 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.control.*?>
-<?import javafx.scene.layout.VBox?>
 <?import javafx.geometry.Insets?>
-
+<?import javafx.scene.control.TextArea?>
+<?import javafx.scene.layout.VBox?>
 <VBox alignment="CENTER">
     <children>
         <TextArea xmlns="http://javafx.com/javafx/8"
